# folketinget-api-models

./: Cargo.toml  README.md
src/: lib.rs
