[package]
name = "folketinget-api-models"
version = "0.1.0"
authors = ["Mathias Pius <contact@pius.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
odata-mapping = { path = "../odata-mapping" }
rusqlite = { version = "0.25.3", features = ["serde_json", "chrono"] }